# trash-shell

./: .gitignore  CMakeLists.txt  README.md
src/: builtin.h  env.h  input.h  launch.h  main.c  prompt.h
tests/: input_tok_test.h  test.c  wtf.h
